[gd_scene load_steps=16 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Asset/Font/ORANGEKID.otf" type="DynamicFontData" id=2]
[ext_resource path="res://Asset/Font/KARMATICARCADE.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Asset/Pict/doctor_mitch.png" type="Texture" id=4]
[ext_resource path="res://Asset/Pict/background_hospita(2).jpg" type="Texture" id=5]
[ext_resource path="res://Asset/Font/Carnevalee Freakshow.otf" type="DynamicFontData" id=6]
[ext_resource path="res://Countdown.gd" type="Script" id=7]
[ext_resource path="res://Asset/Pict/HUD.png" type="Texture" id=8]
[ext_resource path="res://Asset/Font/ARCADECLASSIC.otf" type="DynamicFontData" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.9113, 266.613 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=4]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="Hospital" type="TextureRect" parent="."]
margin_left = -69.3275
margin_top = -37.2267
margin_right = 1094.67
margin_bottom = 649.773
texture = ExtResource( 5 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Player" type="Sprite" parent="."]
position = Vector2( 57.2111, 291.882 )
scale = Vector2( 0.326072, 0.306575 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Loser" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Loser"]
position = Vector2( 51.284, 304.613 )
shape = SubResource( 1 )

[node name="SpawnContainer" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="SpawnContainer"]
position = Vector2( 1037, 1.57276 )

[node name="Position2D2" type="Position2D" parent="SpawnContainer"]
position = Vector2( 1038.24, 99.0896 )

[node name="Position2D3" type="Position2D" parent="SpawnContainer"]
position = Vector2( 1039.62, 197.889 )

[node name="Position2D4" type="Position2D" parent="SpawnContainer"]
position = Vector2( 1039.67, 297.576 )

[node name="Position2D5" type="Position2D" parent="SpawnContainer"]
position = Vector2( 1039.69, 395.116 )

[node name="EnemyContainer" type="Node2D" parent="."]
position = Vector2( 140.308, 118.981 )

[node name="SpawnTmer" type="Timer" parent="."]
wait_time = 5.0

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 50.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Countdown" type="Control" parent="CanvasLayer"]
margin_left = 895.056
margin_top = -0.943878
margin_right = 1024.06
margin_bottom = 39.0561
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}
minutes = 30

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Countdown"]
margin_left = -576.0
margin_top = 35.6466
margin_right = 280.0
margin_bottom = 137.647
rect_scale = Vector2( 0.49872, 0.369225 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="CanvasLayer/Countdown"]
autostart = true

[node name="menit" type="RichTextLabel" parent="CanvasLayer/Countdown"]
margin_left = -397.203
margin_top = 33.2452
margin_right = -374.203
margin_bottom = 73.2452
custom_fonts/normal_font = SubResource( 2 )
bbcode_text = "00"
text = "00"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="per" type="RichTextLabel" parent="CanvasLayer/Countdown"]
visible = false
margin_left = 64.0
margin_right = 88.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 2 )
bbcode_text = ":"
text = ":"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="detik" type="RichTextLabel" parent="CanvasLayer/Countdown"]
margin_left = -355.018
margin_top = 32.8701
margin_right = -299.018
margin_bottom = 72.8701
custom_fonts/normal_font = SubResource( 2 )
bbcode_text = "00"
text = "00"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="scoring" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreValue" type="RichTextLabel" parent="CanvasLayer/scoring"]
margin_left = 332.0
margin_top = 40.0
margin_right = 472.0
margin_bottom = 62.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center] 000 000 000 [/center]"
text = " 000 000 000 "
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HighscoreValue" type="RichTextLabel" parent="CanvasLayer/scoring"]
margin_left = 598.0
margin_top = 40.0
margin_right = 729.0
margin_bottom = 62.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center] 000 000 000 [/center]"
text = " 000 000 000 "
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="GameOverScreen" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.51984
margin_bottom = 2.51984
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/GameOverScreen"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOverScreen/CenterContainer"]
margin_left = 82.0
margin_top = 222.0
margin_right = 927.0
margin_bottom = 363.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
margin_right = 845.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 4 )
text = "MAAF DOKTER TELAH GAGAL MENYELAMATKAN DUNIA
KAMU TERPAPAR VIRUS MEMATIKAN"
align = 1

[node name="RestartButton" type="Button" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 845.0
margin_bottom = 101.0
mouse_filter = 1
text = "RESTART"

[node name="MenuButton" type="Button" parent="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 845.0
margin_bottom = 141.0
mouse_filter = 1
text = "BACK TO MAIN MENU"

[node name="WinnerScreen" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 2.51984
margin_bottom = 2.51984
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/WinnerScreen"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/WinnerScreen/CenterContainer"]
margin_left = 86.0
margin_top = 222.0
margin_right = 923.0
margin_bottom = 363.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="CanvasLayer/WinnerScreen/CenterContainer/VBoxContainer"]
margin_right = 837.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 4 )
text = "SELAMAT DOKTER TELAH MENYELAMATKAN DUNIA
KAMU BISA MELANJUTKAN KE CHAPTER BERIKUTNYA"
align = 1

[node name="ChapterNextButton" type="Button" parent="CanvasLayer/WinnerScreen/CenterContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 837.0
margin_bottom = 101.0
mouse_filter = 1
text = "NEXT CHAPTER"

[node name="MenuButton" type="Button" parent="CanvasLayer/WinnerScreen/CenterContainer/VBoxContainer"]
margin_top = 121.0
margin_right = 837.0
margin_bottom = 141.0
mouse_filter = 1
text = "BACK TO MAIN MENU"

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -7.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AtasRow" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_right = 1015.0
mouse_filter = 2

[node name="TengahRow" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 4.0
margin_right = 1015.0
margin_bottom = 564.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/TengahRow"]
margin_bottom = 560.0

[node name="BawahRow" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
margin_top = 568.0
margin_right = 1015.0
margin_bottom = 588.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer/BawahRow"]
margin_right = 199.0
margin_bottom = 20.0
mouse_filter = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/BawahRow/HBoxContainer"]
margin_right = 125.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 5 )
text = "   Locations: Hospital."

[node name="SusahLabel" type="Label" parent="CanvasLayer/VBoxContainer/BawahRow/HBoxContainer"]
margin_left = 129.0
margin_right = 188.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 6 )
text = "Difficulty:"

[node name="SusahValue" type="Label" parent="CanvasLayer/VBoxContainer/BawahRow/HBoxContainer"]
margin_left = 192.0
margin_right = 199.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 6 )
text = "0"
[connection signal="body_entered" from="Loser" to="." method="_on_Loser_body_entered"]
[connection signal="timeout" from="SpawnTmer" to="." method="_on_SpawnTmer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_DifficultyTimer_timeout"]
[connection signal="timeout" from="CanvasLayer/Countdown/Timer" to="CanvasLayer/Countdown" method="_on_Timer_timeout"]
[connection signal="pressed" from="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="CanvasLayer/GameOverScreen/CenterContainer/VBoxContainer/MenuButton" to="." method="_on_MenuButton_pressed"]
